--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -3,6 +3,9 @@
   padding: 0;
   list-style: none;
 }
+.red {
+  color: #A94442;
+}
 .body_bg {
   background-color: #222D32;
 }
@@ -22,6 +25,9 @@ a:active {
 .mt_150 {
   margin-top: 150px;
 }
+.mt_20 {
+  margin-top: 20px;
+}
 /*左侧侧边栏布局*/
 .lt_aside {
   width: 180px;
@@ -30,6 +36,8 @@ a:active {
   position: fixed;
   top: 0;
   left: 0;
+  transition: all 1s;
+  z-index: 999;
 }
 .lt_aside .brand {
   width: 180px;
@@ -67,4 +75,44 @@ a:active {
 }
 .lt_aside .nav ul .child a {
   padding-left: 60px;
+}
+.lt_aside.hiddenmenu {
+  left: -180px;
+}
+/*右侧布局*/
+.lt_main {
+  padding-left: 180px;
+  padding-top: 50px;
+  height: 2000px;
+  transition: all 1s;
+  /*图表*/
+}
+.lt_main.hiddenmenu {
+  padding-left: 0;
+}
+.lt_main .lt_topbar {
+  height: 50px;
+  background-color: #3C8DBC;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  padding-left: 180px;
+  transition: all 1s;
+}
+.lt_main .lt_topbar a {
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  font-size: 18px;
+  color: #fff;
+}
+.lt_main .lt_topbar.hiddenmenu {
+  padding-left: 0;
+}
+.lt_main .lt_content .echarts_1,
+.lt_main .lt_content .echarts_2 {
+  width: 48%;
+  height: 400px;
 }
