--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -69,9 +69,14 @@ a:active {
 .lt_aside .nav ul a {
   height: 40px;
   line-height: 40px;
+  display: block;
   color: #fff;
   padding-left: 40px;
   border-left: 3px solid transparent;
+}
+.lt_aside .nav ul a.current {
+  background-color: #1D1F21;
+  border-left: 3px solid #006699;
 }
 .lt_aside .nav ul .child a {
   padding-left: 60px;
@@ -115,4 +120,11 @@ a:active {
 .lt_main .lt_content .echarts_2 {
   width: 48%;
   height: 400px;
+}
+.lt_main .lt_content .table.table-bordered th,
+.lt_main .lt_content .table.table-bordered td {
+  text-align: center;
+  /*表格垂直居中*/
+  vertical-align: middle;
+  /*属性不能设置给table*/
 }
