--- a/public/front2/css/common.css
+++ b/public/front2/css/common.css
@@ -106,3 +106,63 @@ img {
   height: 100%;
   position: relative;
 }
+
+
+
+/* 公共的搜索框样式 */
+.lt_search {
+  padding: 10px;
+  position: relative;
+}
+.lt_search .search_input {
+  height: 34px;
+  font-size: 12px;
+  margin: 0;
+  border-radius: 5px;
+  border: 1px solid #007AFF;
+}
+.lt_search .search_btn {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  border-radius: 0 5px 5px 0;
+}
+
+
+
+/* 公共的商品样式 */
+.lt_product {
+  padding: 10px;
+}
+.lt_product_item {
+  border: 1px solid #ccc;
+  padding: 10px;
+  float: left;
+  width: 48%;
+  margin-bottom: 10px;
+  text-align: center;
+}
+.lt_product_item a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.lt_product_item:nth-child(2n+1) {
+  margin-right: 4%;
+}
+.lt_product_item .info {
+  text-align: left;
+  height: 40px;
+}
+.lt_product_item .price {
+  color: red;
+}
+.lt_product_item .oldPrice {
+  text-decoration: line-through;
+}
+
+.lt_product_item img {
+  width: 150px;
+  height: 150px;
+  margin: 0 auto;
+}
