--- a/public/front/css/common.css
+++ b/public/front/css/common.css
@@ -106,3 +106,55 @@ img {
   height: 100%;
   position: relative;
 }
+
+/* 公共部分: 搜索框 */
+.lt_search {
+  padding: 10px;
+  position: relative;
+  overflow: hidden;
+}
+.lt_search .search_input {
+  width: 100%;
+  height: 34px;
+  font-size: 12px;
+  border: 1px solid #007AFF;
+  border-radius: 5px;
+  /* overflow: hidden; */
+  margin-bottom: 0;
+}
+.lt_search .search_btn {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  border-radius: 0 5px 5px 0;
+}
+
+/* 公共部分: 商品模块 */
+.lt_product {
+  padding: 10px;
+}
+.lt_product_item {
+  border: 1px solid #ccc;
+  padding: 10px;
+  float: left;
+  width: 48%;
+  margin-bottom: 10px;
+  text-align: center;
+}
+.lt_product_item a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.lt_product_item:nth-child(2n+1) {
+  margin-right: 4%;
+}
+.lt_product_item .info {
+  text-align: left;
+}
+.lt_product_item .price {
+  color: red;
+}
+.lt_product_item .oldPrice {
+  text-decoration: line-through;
+}
