--- a/public/front2/css/common.css
+++ b/public/front2/css/common.css
@@ -166,3 +166,21 @@ img {
   height: 150px;
   margin: 0 auto;
 }
+
+
+
+/* 公共的尺码样式 */
+.lt_size span {
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  line-height: 25px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  font-size: 12px;
+  margin: 3px 0;
+}
+.lt_size span.current {
+  background-color: orange;
+  color: #fff;
+}
