--- a/public/front/css/common.css
+++ b/public/front/css/common.css
@@ -167,3 +167,23 @@ img {
   height: 150px;
   margin: 0 auto;
 }
+
+/* 公共部分: 尺码样式 */
+.lt_size span {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+  text-align: center;
+  border: 1px solid #ccc;
+  margin: 3px 0;
+  font-size: 12px;
+}
+.lt_size span.current {
+  background-color: orange;
+  color: #fff;
+}
+.lt_num span {
+  font-size: 12px;
+  color: #666;
+}
